--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/cubism.v1.min.js"></script>
     <script type="text/javascript" src="js/dash.js"></script>
-    <title>Bernhard</title>
+    <title>Friedrich</title>
   </head>
 
   <body onLoad="dash.onLoad()">
