--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/cubism.css" type="text/css" media="screen" />
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/cubism.v1.min.js"></script>
+    <script type="text/javascript" src="underscore-min.js"></script>
     <script type="text/javascript" src="js/dash.js"></script>
     <title>Friedrich</title>
   </head>
