Added query config section.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -25,6 +25,14 @@
             </span>
           </div>
           <div class="settings-form-section">
+            <span class="settings-form-heading">Query</span>
+            <br/>
+            <input type="text" value="true" />
+            <p>For help writing queries, see
+              <a href="http://riemann.io/concepts.html" target="_blank">Riemann Concepts</a>
+            </p>
+          </div>
+          <div class="settings-form-section">
             <span class="settings-form-heading">Services</span>
             <div id="settings-active-services" class="settings-form-section"></div>
           </div>
