Saving and restoring settings state from form.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -27,7 +27,7 @@
           <div class="settings-form-section">
             <span class="settings-form-heading">Query</span>
             <br/>
-            <input type="text" value="true" />
+            <input id="query-input" type="text" value="true" />
             <p>For help writing queries, see
               <a href="http://riemann.io/concepts.html" target="_blank">Riemann Concepts</a>
             </p>
