CSS sizing fix.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div id="time-series-container" class="container"></div>
+    <div id="time-series-container"</div>
 
   </body>
 
