Adding a select/deselect-all checkbox and sorting services alphabetically.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -34,7 +34,10 @@
           </div>
           <div class="settings-form-section">
             <span class="settings-form-heading">Services</span>
-            <div id="settings-active-services" class="settings-form-section"></div>
+            <div id="settings-active-services" class="settings-form-section">
+              <input id="services-select-all-input" type="checkbox" />
+              <span class=" select-all">(all)</span>
+            </div>
           </div>
           <div class="settings-form-section">
             <input type="button" id="clear-event-buffers-input" value="Clear Buffers"/>
